# ghc-grin

./: .gitignore  GHC-IR.md  GHCCoreGrin.hs  GHCGrin.hs  Ideas.md  LambdaGrin.hs  README.md  cmm-info  ghc-8.2.2-cleaned.patch  ghc-8.2.2.patch  ghc-8.6.2.patch  ghc-grin.cabal  ghc-rts-symbols  lambda-stg-loopback  lambdabin-clean.sh  lto-stg  roadmap.ghc-grin  stack.yaml  stg-to-grin  stgbin-clean.sh  stgbin-watch.sh
external-stg/: LICENSE  data-con-from-type  external-stg.cabal  ghc-dump-stg.cabal  stg-type-query-experiment
external-stg-util/: LICENSE  external-stg-util.cabal
external-stg-util/app/: Main.hs
external-stg-util/src/Stg/: Pretty.hs  Reconstruct.hs  StgPretty.hs  Util.hs
external-stg/GHC/: Prelude.hs
external-stg/Stg/: Convert.hs  Syntax.hs  ToStg.hs  UnariseType.hs
ghc-8.11.0.20200215-src/libraries/exceptions/: .ghci  .gitignore  .travis.yml  AUTHORS.markdown  CHANGELOG.markdown  README.markdown  cabal.haskell-ci  exceptions.cabal
ghc-8.11.0.20200215-src/libraries/exceptions/tests/: Tests.hs
ghc-8.11.0.20200215-src/libraries/hpc/: changelog.md  hpc.cabal
ghc-8.11.0.20200215-src/libraries/stm/testsuite/: README.md  testsuite.cabal
ghc-8.2.2/libraries/hoopl/: .gitignore  .travis.yml  LICENSE  README.md  changelog.md  hoopl.cabal
ghc-8.2.2/libraries/hoopl/src/: .gitignore
ghc-8.2.2/libraries/hoopl/testing/: .gitignore  Ast.hs  Ast2ir.hs  ConstProp.hs  Eval.hs  EvalMonad.hs  Expr.hs  IR.hs  Ir2ast.hs  Live.hs  Main.hs  OptSupport.hs  PP.hs  Parse.hs  README  Simplify.hs  Test.hs  constprop-figure
ghc-8.6.2/libraries/stm/testsuite/: cabal.project  testsuite.cabal
ghc-grin/: ghc-grin.cabal
ghc-grin-benchmark/basic/: basic.cabal  basic.hs  basic01.hs  basic02.hs  basic03.hs  basic04.hs  basic05.hs  basic06.hs  clib.c
ghc-grin-benchmark/boq-custom/: LICENSE  RTS.hs  boq-custom.cabal  exp3_8.hs  info  nfib.hs  puzzle.hs  queens.hs  sieve.hs  sorting.hs  tak.hs  tsumupto.hs  words.hs
ghc-grin-benchmark/boq-custom/todo/: awards.hs  boyer2.hs  cichelli.hs  clausify.hs  event.hs  ida.hs  typecheck.hs
ghc-grin-benchmark/boquist-grin-bench/: README  boquist-grin-bench.cabal  comp.sh  hgc.mk
ghc-grin-benchmark/boquist-grin-bench/imaginary/exp3_8/: Jmakefile  Main.hs  Makefile  exp3_8.hs  exp3_8.stdout  hgc.out
ghc-grin-benchmark/boquist-grin-bench/imaginary/tak/: Changes  Jmakefile  Main.hs  Makefile  tak.hs  tak.stdout
ghc-grin-benchmark/boquist-grin-bench/other/nfib/: Makefile  hgc.out  nfib.hs
ghc-grin-benchmark/boquist-grin-bench/other/puzzle/: Makefile  hgc.out  prel.hs  puzzle.hs
ghc-grin-benchmark/boquist-grin-bench/other/queens/: Makefile  hgc.out  prel.hs  queens.hs
ghc-grin-benchmark/boquist-grin-bench/other/sieve/: Makefile  hgc.out  prel.hs  sieve.hs
ghc-grin-benchmark/boquist-grin-bench/other/tsumupto/: Makefile  hgc.out  tsumupto.hs
ghc-grin-benchmark/boquist-grin-bench/other/words/: Makefile  hgc.out  prel.hs  words.hs
ghc-grin-benchmark/boquist-grin-bench/results/: errl.a1  errl.a1r  errl.a2  errl.a2r  errl.a3  errl.a3r  errl.a4  errl.a4r  errl.a5  errl.a5r  errl.a6  errl.a6r  errl.a7  errl.a7r  errl.a8  errl.a8r  errl.b1  errl.b2  errl.comp_ghc  errl.comp_hbc  errl.comp_hgc  errl.count_ghc  errl.count_hbc  errl.count_hgc  errl.counts_all  errl.evals  errl.g1  errl.g2  errl.g3  errl.g4  errl.gc1  errl.gc2  errl.gcse1  errl.gcse2  errl.run_hgc  errl.size_hgc  errl.stats_hgc  errl.summary_hgc  errl.time5_ghc  errl.time5_hbc  (+5 more)
ghc-grin-benchmark/boquist-grin-bench/spectral/awards/: Changes  Jmakefile  Main.hs  Makefile  awards.hs  awards.stdout  hgc.out  prel.hs
ghc-grin-benchmark/boquist-grin-bench/spectral/boyer2/: Changes  Jmakefile  Lisplikefns.hs  Makefile  boyer2.hs  hgc.out  prel.hs
ghc-grin-benchmark/boquist-grin-bench/spectral/cichelli/: Changes  Jmakefile  Main.hs  Makefile  aux.hs  cichelli.hs  cichelli.stdout  hgc.out  key.hs  prel.hs  prog.hs
ghc-grin-benchmark/boquist-grin-bench/spectral/clausify/: Changes  Jmakefile  Main.hs  Makefile  clausify.hs  hgc.out  prel.hs
ghc-grin-benchmark/boquist-grin-bench/spectral/sorting/: Changes  Jmakefile  Makefile  Sort.hs  hgc.out  prel.hs  sorting.hs  (+1 more)
ghc-grin-benchmark/sum-list/: sum-list.cabal
ghc-grin/app/: GHCCoreGrin.hs  GHCGrin.hs
ghc-grin/src/: StgLoopback.hs  StgSample.hs
ghc-grin/src/Lambda/: FromCore.hs  FromDumpCore.hs  FromDumpStg.hs  FromSTG.hs  FromStg.hs  GHCPrimOps.hs  GHCSymbols.hs  ToStg.hs
ghc-primop-gen/: GHCPrimOps.hs  Gen.hs  ghc-primop-gen.cabal  higher-order-primops  primops-info  primops-problem  primops.txt  primops.txt.pp
ghc-primop-gen/genprimopcode/: Lexer.hs  Parser.hs
ghc-primop-lib/: GHCPrimOp.hs  GHCPrimOpEval.hs  ghc-primop-lib.cabal
lambda-grin/: lambda-grin.cabal
lambda-grin/app/: LambdaGrinCLI.hs
lambda-grin/lib/Lambda/: CodeGen.hs  Lint.hs  Syntax.hs
lambda-grin/souffle-datalog/: AST.dl  CBy.dl  CFA.dl  Check.dl  LVA.dl  PointsTo.dl  PrimOp-Addr.dl  PrimOp-Arrays.dl  PrimOp-ByteArray.dl  PrimOp-Bytecode.dl  PrimOp-CCS.dl  PrimOp-Compact.dl  PrimOp-Concurrency.dl  PrimOp-Exception.dl  PrimOp-MVar.dl  PrimOp-MutVar.dl  PrimOp-Parallelism.dl  PrimOp-STM.dl  PrimOp-StablePtr.dl  PrimOp-WeakPtr.dl  main.dl
lambda-grin/src/Lambda/: ClosureConversion.hs  CodeGen.hs  ControlFlowAnalysisM.hs  DeadFunctionElimination.hs  DeadFunctionEliminationM.hs  GhcPrimOps.hs  GhcPrimOpsBoxed.hs  GrinCodeGen.hs  GrinCodeGen2.hs  GrinCodeGen3.hs  GrinCodeGenBoxed.hs  GrinCodeGenTyped.hs  GrinCodeGenUnboxed.hs  Lint.hs  Name.hs  Parse.hs  Parse2.hs  Pretty.hs  PrimOps.hs  StaticSingleAssignment.hs  Syntax.hs  Syntax2.hs  TH.hs  ToDatalog.hs  ToSyntax2.hs  Util.hs  live_def_analysis.dl
lambda-grin/test/: CBySpec.hs  CFASpec.hs  ParserSpec.hs  PrimOpArraySpec.hs  PrimOpCCSSpec.hs  PrimOpExceptionSpec.hs  PrimOpMVarSpec.hs  PrimOpMutVarSpec.hs  PrimOpSTMSpec.hs  PrimOpStablePtrSpec.hs  PrimOpWeakPtrSpec.hs
patched-lambda-to-ghc-stg/mini-ghc-grin/: LICENSE  mini-ghc-grin.cabal
patched-lambda-to-ghc-stg/mini-ghc-grin/app/: genExe.hs  genObj.hs  showGHCStg.hs
patched-lambda-to-ghc-stg/mini-ghc-grin/src/: StgLoopback.hs
(+798 files in other folders)
