name:                external-stg-util
version:             0.1.0.0
synopsis:            Handy tools for working with @external-stg@ dumps.
--description:
license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
copyright:           (c) 2020 Csaba Hruska
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Stg.Util
                       Stg.Pretty
                       Stg.Reconstruct
  hs-source-dirs:      src
  build-depends:       base < 5.0,
                       external-stg,
                       bytestring,
                       unordered-containers,
                       hashable,
                       ansi-wl-pprint,
                       binary
  default-language:    Haskell2010

executable ext-stg
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base < 5.0,
                       external-stg,
                       external-stg-util,
                       ansi-wl-pprint,
                       regex-tdfa,
                       regex-tdfa-text,
                       bytestring,
                       optparse-applicative
  default-language:    Haskell2010
