name:                ghc-dump-stg
version:             0.1.0.0
synopsis:            A library to dump GHC's STG representation.

license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
copyright:           (c) 2018 Csaba Hruska
category:            Development
build-type:          Simple
tested-with:         GHC==8.6.2
cabal-version:       >=1.10

library
  other-modules:       GhcPrelude
  exposed-modules:     GhcDump_StgConvert
                       GhcDump_StgAst
  ghc-options:         -Wall
  other-extensions:    GeneralizedNewtypeDeriving
  build-depends:       base,
                       bytestring,
                       filepath,
                       binary,
                       containers,
                       transformers,
                       ghc
  default-language:    Haskell2010
