name:                ghc-grin
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/grin#readme
license:             BSD3
license-file:        LICENSE
author:              Andor Penzes, Csaba Hruska
maintainer:          andor.penzes@gmail.com
copyright:           2018 Andor Penzes, Csaba Hruska
category:            Compiler
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Lambda.FromStg
    Lambda.GHCPrimOps
    StgLoopback
    StgSample

  build-depends:
      base
    , containers
    , mtl
    , text
    , bytestring
    , lambda-grin
    , ghc-dump-stg
    , ghc-dump-util
    , ansi-wl-pprint
    , ghc
    , ghc-paths
    , time

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/grin-tech/grin

executable ghc-grin
  hs-source-dirs:      app
  main-is:             GHCGrin.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , filepath
                     , directory
                     , containers
                     , unix
                     , ansi-wl-pprint
                     , store
                     , blake2
                     , bytestring
                     , grin
                     , ghc-grin
                     , ghc-dump-stg
                     , ghc-dump-util
                     , lambda-grin
  default-language:    Haskell2010
