name:                ghc-grin
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/grin#readme
license:             BSD3
license-file:        LICENSE
author:              Andor Penzes, Csaba Hruska
maintainer:          andor.penzes@gmail.com
copyright:           2018 Andor Penzes, Csaba Hruska
category:            Compiler
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
--    Lambda.ToStg
    Lambda.FromStg
    Lambda.GHCPrimOps
    Lambda.GHCSymbols
--    StgLoopback
--    StgSample

  build-depends:
      base
    , containers
    , mtl
    , transformers
    , text
    , bytestring
    , lambda-grin
    , external-stg
    , external-stg-util
    , ansi-wl-pprint
    , recursion-schemes
    , ghc
    , ghc-paths
    , time

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/grin-tech/grin

executable ghc-grin
  hs-source-dirs:      app
  main-is:             GHCGrin.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , filepath
                     , directory
                     , containers
                     , filemanip
                     , unix
                     , ansi-wl-pprint
                     , binary
                     , blake2
                     , bytestring
                     , ghc-grin
                     , external-stg
                     , external-stg-util
                     , lambda-grin
  default-language:    Haskell2010

executable gen-lambda
  hs-source-dirs:      app
  main-is:             genLambda.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , filepath
                     , directory
                     , containers
                     , ansi-wl-pprint
                     , binary
                     , blake2
                     , bytestring
                     , ghc-grin
                     , external-stg
                     , external-stg-util
                     , lambda-grin
  default-language:    Haskell2010
