name:                ghc-primop-lib
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     GHCPrimOpEval, GHCPrimOp
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
  -- hs-source-dirs:
  default-language:    Haskell2010
