name:                lambda-grin
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/grin#readme
license:             BSD3
license-file:        LICENSE
author:              Andor Penzes, Csaba Hruska
maintainer:          andor.penzes@gmail.com
copyright:           2017 Andor Penzes, Csaba Hruska
category:            Compiler
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    --Lambda.GrinCodeGen
    --Lambda.GrinCodeGenUnboxed
    --Lambda.GrinCodeGenBoxed
    --Lambda.GrinCodeGenTyped
    Lambda.TH
    Lambda.Parse
    Lambda.Pretty
    Lambda.PrimOps
    Lambda.GhcPrimOps
    --Lambda.GhcPrimOpsBoxed
    Lambda.Syntax
    Lambda.Syntax2
    Lambda.ToSyntax2
    Lambda.ToDatalog
    Lambda.Util
    Lambda.Lint
    Lambda.StaticSingleAssignment
    Lambda.ClosureConversion
    Lambda.DeadFunctionElimination
    Lambda.DeadFunctionEliminationM

  build-depends:
      base
    , containers
    , mtl
    , grin
    , bytestring
    , recursion-schemes
    , ansi-wl-pprint
    , megaparsec
    , text
    , vector
    , template-haskell
    , process
    , temporary
    , filepath
    , store

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/grin-tech/grin

executable lambda-grin
  hs-source-dirs:      app
  main-is:             LambdaGrinCLI.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , megaparsec
                     , store
                     , bytestring
                     , ansi-wl-pprint
                     , lambda-grin
                     , grin
  default-language:    Haskell2010
