name:                lambda-grin
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/grin#readme
license:             BSD3
license-file:        LICENSE
author:              Andor Penzes, Csaba Hruska
maintainer:          andor.penzes@gmail.com
copyright:           2017 Andor Penzes, Csaba Hruska
category:            Compiler
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    --Lambda.GrinCodeGen
    --Lambda.GrinCodeGenUnboxed
    --Lambda.GrinCodeGenBoxed
    --Lambda.GrinCodeGenTyped
    Lambda.TH
    Lambda.Parse
    Lambda.Parse2
    Lambda.Pretty
    Lambda.PrimOps
    Lambda.GhcPrimOps
    --Lambda.GhcPrimOpsBoxed
    Lambda.Syntax
    Lambda.Syntax2
    Lambda.ToSyntax2
    Lambda.ToDatalog
    Lambda.Util
    Lambda.Lint
    Lambda.StaticSingleAssignment
    Lambda.ClosureConversion
    Lambda.DeadFunctionElimination
    Lambda.DeadFunctionEliminationM
    Lambda.ControlFlowAnalysisM

  build-depends:
      base
    , containers
    , mtl
    , grin
    , bytestring
    , recursion-schemes
    , ansi-wl-pprint
    , megaparsec
    , neat-interpolation
    , text
    , vector
    , template-haskell
    , process
    , temporary
    , filepath
    , directory
    , store

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/grin-tech/grin

executable lambda-grin
  hs-source-dirs:      app
  main-is:             LambdaGrinCLI.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , megaparsec
                     , store
                     , bytestring
                     , ansi-wl-pprint
                     , lambda-grin
                     , grin
  default-language:    Haskell2010

test-suite lambda-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.11
                     , containers
                     , filepath
                     , functor-infix
                     , lambda-grin
                     , hspec
                     , hspec-core
                     , hspec-discover
                     , QuickCheck
                     , deepseq
                     , vector
                     , text
                     , random
                     , microlens
                     , transformers
                     , mtl
                     , ansi-wl-pprint
                     , pretty-show
                     , directory
                     , inline-c
                     , grin

  other-modules:
                     ParserSpec
                     CFASpec
  default-language:    Haskell2010
