name:                basic
version:             0.1.0.0

license:             BSD3
license-file:        LICENSE
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable basic
  build-depends:  base
  main-is:        basic.hs
  ghc-options:    -O
  c-sources:      clib.c
