name:                sum-list
version:             0.1.0.0

license:             BSD3
license-file:        LICENSE
category:            Development
build-type:          Simple
cabal-version:       >=1.10

--executable sum
--  build-depends:  base
--  main-is:        sum.hs

--executable tsumupto1
--  build-depends:  base
--  main-is:        tsumupto1.hs

executable tsumupto2
  build-depends:  base
  main-is:        tsumupto2.hs
