name:                mini-ghc-grin
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/grin#readme
license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
copyright:           2020 Csaba Hruska
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Lambda.Name
    Lambda.Syntax
    Lambda.ToStg
    StgLoopback
    Stg.Convert
    Stg.Syntax

  build-depends:
      base
    , containers
    , mtl
    , transformers
    , bytestring
    , text
    , ghc
    , ghc-paths
    , ghc-boot
    , binary
    , recursion-schemes
    , filepath

  default-language:    Haskell2010

executable gen-exe
  hs-source-dirs:      app
  main-is:             genExe.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , binary
                     , ghc
                     , mini-ghc-grin
  default-language:    Haskell2010
