name:                mini-ghc-grin
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/grin#readme
license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
copyright:           2020 Csaba Hruska
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    --Lambda.Name
    --Lambda.Syntax
    --Lambda.ToStg
    StgLoopback
    Stg.ToStg
    Stg.Convert
    Stg.Syntax
    Stg.Util
    Stg.Reconstruct

  build-depends:
      base
    , containers
    , mtl
    , transformers
    , bytestring
    , text
    , ghc
    , ghc-paths
    , ghc-boot
    , binary
    , recursion-schemes
    , filepath
    , unordered-containers
    , hashable

  default-language:    Haskell2010

executable gen-exe
  hs-source-dirs:      app
  main-is:             genExe.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , binary
                     , ghc
                     , mini-ghc-grin
                     , split
                     , process
                     , filepath
                     , filemanip
                     , containers
                     , bytestring
  default-language:    Haskell2010

executable gen-obj
  hs-source-dirs:      app
  main-is:             genObj.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ghc
                     , ghc-paths
                     , mini-ghc-grin
                     , filepath
  default-language:    Haskell2010

executable show-ghc-stg
  hs-source-dirs:      app
  main-is:             showGHCStg.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ghc
                     , ghc-paths
                     , mini-ghc-grin
                     , filepath
  default-language:    Haskell2010
