name:          exceptions
category:      Control, Exceptions, Monad
version:       0.10.3
cabal-version: >= 1.8
license:       BSD3
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/exceptions/
bug-reports:   http://github.com/ekmett/exceptions/issues
copyright:     Copyright (C) 2013-2015 Edward A. Kmett
               Copyright (C) 2012 Google Inc.
build-type:    Simple
tested-with:   GHC == 7.0.4
             , GHC == 7.2.2
             , GHC == 7.4.2
             , GHC == 7.6.3
             , GHC == 7.8.4
             , GHC == 7.10.3
             , GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.1
synopsis:      Extensible optionally-pure exceptions
description:   Extensible optionally-pure exceptions.

extra-source-files:
  .travis.yml
  .ghci
  .gitignore
  .vim.custom
  travis/cabal-apt-install
  travis/config
  AUTHORS.markdown
  README.markdown
  CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/exceptions.git

flag transformers-0-4
  description: Use @transformers-0.4@ or later.
  default:     True

library
  build-depends:
    base                       >= 4.3      && < 5,
    stm                        >= 2.2      && < 3,
    template-haskell           >= 2.2      && < 2.17,
    mtl                        >= 2.0      && < 2.3

  if !impl(ghc >= 8.0)
    build-depends: fail        == 4.9.*

  if flag(transformers-0-4)
    build-depends:
      transformers             >= 0.4      && < 0.6
  else
    build-depends:
      transformers             >= 0.2      && < 0.4,
      transformers-compat      >= 0.3      && < 0.7

  exposed-modules:
    Control.Monad.Catch
    Control.Monad.Catch.Pure

  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: src

test-suite exceptions-tests
  main-is: Tests.hs
  other-modules: Control.Monad.Catch.Tests
  hs-source-dirs: tests
  ghc-options: -Wall -fwarn-tabs
  type: exitcode-stdio-1.0
  build-depends:
    base,
    exceptions,
    stm,
    template-haskell,
    mtl                        >= 2.0,
    test-framework             >= 0.8      && < 0.9,
    test-framework-hunit       >= 0.3      && < 0.4,
    test-framework-quickcheck2 >= 0.3      && < 0.4,
    QuickCheck                 >= 2.5      && < 2.14

  if flag(transformers-0-4)
    build-depends:
      transformers             >= 0.4      && < 0.6
  else
    build-depends:
      transformers             >= 0.2      && < 0.4,
      transformers-compat      >= 0.3      && < 0.7
